--- a/tailwind/custom/single-post.css
+++ b/tailwind/custom/single-post.css
@@ -11,9 +11,8 @@
 	@apply mx-auto md:ml-24 lg:ml-10 lg:w-[36rem] xl:ml-20 xl:w-[47.5rem] min-[1600px]:ml-40 min-[1800px]:ml-64 min-[2000px]:ml-[22rem] min-[2200px]:ml-[28rem] min-[2400px]:ml-[36rem] min-[2800px]:ml-[48rem];
 }
 
-.single .without-toc .entry-content > * {
-	@apply mx-auto lg:w-[36rem] xl:w-[47.5rem];
-}
+/* Styles specifically for the .category-posts.post-wrapper element */
+
 
 a[rel="category tag"] {
 	@apply mb-2 text-sm font-semibold leading-5 text-purple-900 no-underline sm:text-base lg:text-xl;
